# DCF

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_portfolio_managers.py  003_project_dashboard_schema.py  004_repair_project_schema.py
backend/app/: audit.py  auth.py  config.py  database.py  email_service.py  main.py  worker.py
backend/app/api/: dependencies.py  middleware.py
backend/app/api/routes/: __init__.py  (+11 more)
backend/app/calculation/: aggregation.py  capex.py  discounting.py  indexation.py  lease_events.py  sensitivity.py  terminal_value.py  vacancy.py  waterfall.py
backend/app/core/: auth.py  config.py  database.py  logging.py  security.py
backend/app/domain/: constants.py  exceptions.py
backend/app/lib/: kpi_definitions.py
backend/app/middleware/: audit_middleware.py
backend/app/routers/: admin.py  audit.py  health.py  models.py
backend/app/services/: assumption_service.py  audit_service.py  dashboard_service.py  export_service.py  extraction_service.py  mapping_service.py  portfolio_manager_service.py  project_service.py  results_service.py  upload_service.py  valuation_run_service.py
backend/scripts/: seed_admin.ps1  seed_admin.py  seed_portfolio_manager.ps1  seed_portfolio_manager.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_portfolio_managers.py  test_projects_dashboard.py
(+150 files in other folders)
